syntax="proto3";

package optimization;

import "google/protobuf/empty.proto";

option go_package = "./";

message OptimizationRequest{
  string function=1;
  double tolerance = 2;
  int64 maxIter = 3;
}

message Variable {
  string name=1;
  int64 value=2;
}
message OptimizationReply {
  repeated Variable Variable = 1;
  double functionValue=2;
}

service Optimization{
  rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty) {}

  rpc Optimization (OptimizationRequest) returns (OptimizationReply) {}
}